--- a/MyArchive/MyArchive/Base.lproj/Main.storyboard
+++ b/MyArchive/MyArchive/Base.lproj/Main.storyboard
@@ -483,39 +483,38 @@
                                             <rect key="frame" x="0.0" y="0.0" width="393" height="559"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="205-84-4Xm">
+                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="xgZ-gY-a34" userLabel="Main Stack View">
                                                     <rect key="frame" x="40" y="31" width="313" height="497"/>
                                                     <subviews>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="248" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eVe-TY-k9p">
-                                                            <rect key="frame" x="0.0" y="0.0" width="313" height="60"/>
+                                                        <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Title" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="rC6-SZ-FyD">
+                                                            <rect key="frame" x="0.0" y="0.0" width="313" height="50"/>
                                                             <constraints>
-                                                                <constraint firstAttribute="height" constant="60" id="dSv-kY-rkW"/>
+                                                                <constraint firstAttribute="height" constant="50" id="eA8-0x-AJF"/>
                                                             </constraints>
-                                                            <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
-                                                            <nil key="textColor"/>
-                                                            <nil key="highlightedColor"/>
-                                                        </label>
-                                                        <textView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="752" editable="NO" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7eX-J5-9Ss">
-                                                            <rect key="frame" x="0.0" y="70" width="313" height="427"/>
+                                                            <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
+                                                            <textInputTraits key="textInputTraits"/>
+                                                        </textField>
+                                                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="1Qy-T9-Pqh">
+                                                            <rect key="frame" x="0.0" y="60" width="313" height="437"/>
                                                             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                             <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                                             <color key="textColor" systemColor="labelColor"/>
-                                                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                             <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                                         </textView>
                                                     </subviews>
                                                 </stackView>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="205-84-4Xm" firstAttribute="top" secondItem="ZCS-l8-3Oe" secondAttribute="topMargin" constant="20" id="W65-Dc-8Na"/>
-                                                <constraint firstAttribute="bottomMargin" secondItem="205-84-4Xm" secondAttribute="bottom" constant="20" id="hfB-GB-Ag7"/>
-                                                <constraint firstAttribute="trailingMargin" secondItem="205-84-4Xm" secondAttribute="trailing" constant="20" id="r7t-Cu-DaD"/>
-                                                <constraint firstItem="205-84-4Xm" firstAttribute="leading" secondItem="ZCS-l8-3Oe" secondAttribute="leadingMargin" constant="20" id="yhs-Wq-pTa"/>
+                                                <constraint firstItem="xgZ-gY-a34" firstAttribute="leading" secondItem="ZCS-l8-3Oe" secondAttribute="leadingMargin" constant="20" id="5KP-EV-9lt"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="xgZ-gY-a34" secondAttribute="trailing" constant="20" id="CRQ-uB-qH5"/>
+                                                <constraint firstItem="xgZ-gY-a34" firstAttribute="top" secondItem="ZCS-l8-3Oe" secondAttribute="topMargin" constant="20" id="R0m-VB-QKs"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="xgZ-gY-a34" secondAttribute="bottom" constant="20" id="ceR-YR-rVt"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
-                                            <outlet property="contentTextView" destination="7eX-J5-9Ss" id="28H-yA-F2z"/>
-                                            <outlet property="titleLabel" destination="eVe-TY-k9p" id="Mk9-4n-WKn"/>
+                                            <outlet property="contentTextView" destination="1Qy-T9-Pqh" id="VqP-HC-v9b"/>
+                                            <outlet property="titleTextField" destination="rC6-SZ-FyD" id="TKE-Ax-DO9"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
