--- a/MyArchive/MyArchive/Base.lproj/Main.storyboard
+++ b/MyArchive/MyArchive/Base.lproj/Main.storyboard
@@ -135,6 +135,7 @@
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sign Up" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QtF-L9-sbo">
                                         <rect key="frame" x="0.0" y="0.0" width="96.666666666666671" height="56"/>
+                                        <color key="tintColor" red="0.35759943179999998" green="0.3003278291" blue="0.2844325613" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         <fontDescription key="fontDescription" name="Noteworthy-Bold" family="Noteworthy" pointSize="30"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -171,6 +172,7 @@
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="50" id="FKs-eo-d4Z"/>
                                                 </constraints>
+                                                <color key="tintColor" red="0.35759943179999998" green="0.3003278291" blue="0.2844325613" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                 <state key="normal" title="Button"/>
                                                 <buttonConfiguration key="configuration" style="filled" title="Sign Up"/>
                                                 <connections>
@@ -359,6 +361,7 @@
                                                                             <constraints>
                                                                                 <constraint firstAttribute="height" constant="50" id="zrY-ia-jnn"/>
                                                                             </constraints>
+                                                                            <color key="tintColor" red="0.35759943179999998" green="0.3003278291" blue="0.2844325613" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                                             <state key="normal" title="Button"/>
                                                                             <buttonConfiguration key="configuration" style="filled" title="Read"/>
                                                                             <connections>
@@ -367,6 +370,7 @@
                                                                         </button>
                                                                         <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="plus.circle.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="UTK-jh-hhR">
                                                                             <rect key="frame" x="233" y="1" width="50" height="48.666666666666671"/>
+                                                                            <color key="tintColor" red="0.35759943179999998" green="0.3003278291" blue="0.2844325613" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                                             <gestureRecognizers/>
                                                                             <constraints>
                                                                                 <constraint firstAttribute="height" constant="50" id="Y2h-Ji-HjY"/>
@@ -707,7 +711,7 @@
             </objects>
             <point key="canvasLocation" x="1643.5114503816794" y="1331.6901408450706"/>
         </scene>
-        <!--Library View Controller-->
+        <!--Library-->
         <scene sceneID="7df-rQ-tF5">
             <objects>
                 <viewController id="Uo0-Ew-Lld" customClass="LibraryViewController" customModule="MyArchive" customModuleProvider="target" sceneMemberID="viewController">
@@ -784,7 +788,7 @@
                         <viewLayoutGuide key="safeArea" id="Qwq-0A-oOc"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
-                    <navigationItem key="navigationItem" id="TFn-zT-h2h"/>
+                    <navigationItem key="navigationItem" title="Library" id="TFn-zT-h2h"/>
                     <connections>
                         <outlet property="tableView" destination="KhQ-E3-KW9" id="7sK-dW-n8L"/>
                     </connections>
@@ -793,7 +797,7 @@
             </objects>
             <point key="canvasLocation" x="895.41984732824426" y="2005.6338028169016"/>
         </scene>
-        <!--Your Stories View Controller-->
+        <!--Your Stories-->
         <scene sceneID="E6E-sC-Qw3">
             <objects>
                 <viewController id="ZJB-4S-fG5" customClass="YourStoriesViewController" customModule="MyArchive" customModuleProvider="target" sceneMemberID="viewController">
@@ -881,7 +885,7 @@
                             <constraint firstItem="Rly-yo-jjl" firstAttribute="top" secondItem="u4s-cX-7Sd" secondAttribute="top" id="z7o-Zd-oFn"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="4PC-ZP-jRu">
+                    <navigationItem key="navigationItem" title="Your Stories" id="4PC-ZP-jRu">
                         <barButtonItem key="rightBarButtonItem" title="New Story" id="JI9-ud-2Bm">
                             <connections>
                                 <segue destination="XWd-fG-BHo" kind="show" id="fNz-i0-SsH"/>
@@ -1458,6 +1462,7 @@
         <segue reference="fNz-i0-SsH"/>
         <segue reference="EWL-wu-R3Q"/>
     </inferredMetricsTieBreakers>
+    <color key="tintColor" red="0.59335542929999996" green="0.20386764469999999" blue="0.1427304761" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
     <resources>
         <image name="DefaultCover" width="512" height="800"/>
         <image name="book.pages.fill" catalog="system" width="107" height="128"/>
